[package]
name = "cjdns_sys"
version = "0.1.0"
authors = ["Caleb James DeLisle <cjd@cjdns.fr>"]
edition = "2018"
build = "build.rs"

[dependencies]
cjdns = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
boringtun = { workspace = true }
slog = { workspace = true }
pnet = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
async-recursion = { workspace = true }
socket2 = { workspace = true }
libc = { workspace = true }
num_cpus = { workspace = true }
async-trait = { workspace = true }
env_logger = { workspace = true }
byteorder = { workspace = true }
trust-dns-resolver = { workspace = true }
ipnetwork = { workspace = true }
num_enum = { workspace = true }

[build-dependencies]
cc = { workspace = true }
eyre = { workspace = true }
cbindgen = { workspace = true }
bindgen = { workspace = true, optional = true }

[features]
generate-cffi = ["bindgen"]
