[package]
name = "cjdnstool"
version = "0.1.0"
authors = ["Ilyas Gasanov <torso.nafi@gmail.com>"]
edition = "2021"
description = "Command line tool for querying cjdns admin API."

[dependencies]
anyhow = "1.0"
cjdns-admin = { git = "https://github.com/cjdelisle/cjdns-route-server", rev = "80f23210fdf7b6e1aeabdbd1eb96b48eef0c59a7", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
data-encoding = "2"
lazy_static = "1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1.27", features = ["fs", "net", "macros", "time", "rt-multi-thread", "sync"] }
