[package]
name = "cjdnstool"
version = "0.1.0"
authors = [
    "Ilyas Gasanov <torso.nafi@gmail.com>",
]
edition = "2021"
description = "Command line tool for querying cjdns admin API."

[dependencies]
anyhow = { workspace = true }
cjdns-admin = { workspace = true }
clap = { workspace = true }
const_format = { workspace = true }
data-encoding = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sodiumoxide = { workspace = true }
tokio = { workspace = true }
